--- a/gallery.css
+++ b/gallery.css
@@ -1,20 +1,27 @@
+.gallery-box > div:first-child, .gallery-box-fullscreen > div:first-child {
+  cursor: pointer;
+  overflow: hidden; }
+  .gallery-box > div:first-child > img, .gallery-box-fullscreen > div:first-child > img {
+    width: 100%; }
+.gallery-box > div:nth-child(2), .gallery-box-fullscreen > div:nth-child(2) {
+  position: relative;
+  overflow: hidden; }
+  .gallery-box > div:nth-child(2) > div, .gallery-box-fullscreen > div:nth-child(2) > div {
+    white-space: nowrap;
+    text-align: center; }
+    .gallery-box > div:nth-child(2) > div > img, .gallery-box-fullscreen > div:nth-child(2) > div > img {
+      padding: 0.5rem;
+      margin: 0.5rem;
+      width: 150px;
+      cursor: pointer; }
+      .gallery-box > div:nth-child(2) > div > img.active, .gallery-box-fullscreen > div:nth-child(2) > div > img.active {
+        background-color: #909090; }
+
 .gallery-box {
   width: 100%; }
-  .gallery-box > div:first-child {
-    width: 100%; }
-    .gallery-box > div:first-child > img {
-      width: 100%; }
-  .gallery-box > div:nth-child(2) {
-    position: relative;
-    overflow: hidden;
-    width: 100%; }
-    .gallery-box > div:nth-child(2) > div {
-      white-space: nowrap;
-      text-align: center; }
-      .gallery-box > div:nth-child(2) > div > img {
-        padding: 0.5rem;
-        margin: 0.5rem;
-        width: 150px;
-        cursor: pointer; }
-        .gallery-box > div:nth-child(2) > div > img.active {
-          background-color: #909090; }
+
+.gallery-box-fullscreen-keeper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10000; }
