--- a/gallery.css
+++ b/gallery.css
@@ -1,14 +1,26 @@
 .gallery-box > div:first-child, .gallery-box-fullscreen > div:first-child {
   cursor: pointer;
-  overflow: hidden; }
+  overflow: hidden;
+  position: relative; }
   .gallery-box > div:first-child > img, .gallery-box-fullscreen > div:first-child > img {
-    width: 100%; }
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-transition: opacity 1s ease-in-out;
+    -moz-transition: opacity 1s ease-in-out;
+    -o-transition: opacity 1s ease-in-out;
+    transition: opacity 1s ease-in-out;
+    opacity: 1; }
+    .gallery-box > div:first-child > img.transparent, .gallery-box-fullscreen > div:first-child > img.transparent {
+      opacity: 0; }
 .gallery-box > div:nth-child(2), .gallery-box-fullscreen > div:nth-child(2) {
   position: relative;
   overflow: hidden; }
   .gallery-box > div:nth-child(2) > div, .gallery-box-fullscreen > div:nth-child(2) > div {
     white-space: nowrap;
-    text-align: center; }
+    text-align: center;
+    position: relative; }
     .gallery-box > div:nth-child(2) > div > img, .gallery-box-fullscreen > div:nth-child(2) > div > img {
       padding: 0.5rem;
       margin: 0.5rem;
