--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -3,8 +3,20 @@
         // width:100%;
         cursor:pointer;
         overflow: hidden;
+        position: relative;
         >img{
             width:100%;
+            position: absolute;
+            top:0;
+            left:0;
+            -webkit-transition: opacity 1s ease-in-out;
+            -moz-transition: opacity 1s ease-in-out;
+            -o-transition: opacity 1s ease-in-out;
+            transition: opacity 1s ease-in-out;
+            opacity: 1;
+            &.transparent{
+                opacity: 0;
+            }
         }
     }
     >div:nth-child(2){ // mini_cover
@@ -14,6 +26,7 @@
         >div{ // mini
             white-space: nowrap;
             text-align: center;
+            position: relative;
             >img{
                 padding: 0.5rem;
                 margin: 0.5rem;
