--- a/gallery.css
+++ b/gallery.css
@@ -32,8 +32,33 @@
 .gallery-box {
   width: 100%; }
 
-.gallery-box-fullscreen-keeper {
-  position: fixed;
+.gallery-box-fullscreen-dimmer {
+  position: absolute;
   top: 0;
   left: 0;
-  z-index: 10000; }
+  z-index: 10000;
+  height: 100%;
+  width: 100%;
+  background-color: #000000;
+  opacity: 0.3; }
+
+.gallery-box-fullscreen {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10001; }
+  .gallery-box-fullscreen > div {
+    margin: auto; }
+    .gallery-box-fullscreen > div img {
+      width: 100%;
+      -webkit-transition: opacity 1s ease-in-out;
+      -moz-transition: opacity 1s ease-in-out;
+      -o-transition: opacity 1s ease-in-out;
+      transition: opacity 1s ease-in-out;
+      opacity: 1; }
+      .gallery-box-fullscreen > div img.transparent {
+        opacity: 0; }
